--- a/bitrix/templates/eshop_bootstrap_black/mobile.css
+++ b/bitrix/templates/eshop_bootstrap_black/mobile.css
@@ -144,6 +144,9 @@
    .trainings_category_block-item {
      width: 307px;
    }
+   .aside-menu {
+     display: block;
+   }
  }
  
  @media(max-width:1280px) {
@@ -969,6 +972,12 @@
  }
 
  @media (max-width: 460px) {
+  .in-the-know-form-block,
+  .promo-form-block, 
+  .special-offer-block,
+  .bottom-slider-block__slider-header__right-block {
+    display: none;
+  }
   .header-mini__min-logo {
     display: block;
   }
@@ -978,4 +987,5 @@
   .footer__nav {
     justify-content: center;
   }
+  
  }
