--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -1459,6 +1459,7 @@ button-form-grey {
   align-items: center;
   margin-top: 24px;
   width: 100%;
+  position: relative;
 }
 
 .training .special-offer-block__item__prices {
@@ -4538,7 +4539,7 @@ button-form-grey {
 
 .trainings_category_block-item__title {
   font-family: 'FranklinGothicDemi', sans-serif;
-  font-size: 32px;
+  font-size: 28px;
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
@@ -4546,7 +4547,7 @@ button-form-grey {
   letter-spacing: normal;
   color: #000000;
   width: 180px;
-  margin: 40px auto;
+  margin: 20px auto 40px;
   text-align: center;
 }
 
@@ -4934,6 +4935,7 @@ button-form-grey {
   font-family: 'Roboto', sans-serif;
   position: absolute;
   right: 0;
+  cursor: pointer;
 }
 
 .content-block ol {
