--- a/bitrix/templates/eshop_bootstrap_black/styles.css
+++ b/bitrix/templates/eshop_bootstrap_black/styles.css
@@ -6736,5 +6736,22 @@ div#basket-items-list-container {
   background-position: center;
 }
 
-
+.selectPVZ {
+  display: block;
+  font-family: 'Roboto', sans-serif;
+  border-radius: 32px;
+  background-color: #e31377;
+  border: none;
+  padding: 0.2em;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.9px;
+  text-align: center;
+  color: #ffffff;
+  cursor: pointer;
+  text-transform: uppercase;
+}
 /* end of accordeon */
